# routes/users.js
@@ -5,8 +5,7 @@ const ctrl = require('../controllers/users');
 
 router.get('/', ctrl.getAll);
 router.get('/:id', ctrl.getSingle);
-router.post('/', ctrl.createUser);
 router.put('/:id', ctrl.updateUser);
 router.delete('/:id', ctrl.deleteUser);
-
+router.post('/', ctrl.createUser);
 module.exports = router;
